repositories/architecture/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: marcel-prometheus
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
